<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cuisineSectionTitle"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:text="@string/cuisines"
    android:textSize="20sp"
    />

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/cuisineOptions"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/cuisineSectionTitle"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

    <Spinner
        android:id="@+id/cuisineOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/cuisineSectionTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/priceTitle"
        app:layout_constraintTop_toBottomOf="@+id/cuisineOptions"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/price_range"
        android:textSize="20sp"
        />

    <com.google.android.material.slider.Slider
        android:id="@+id/priceSlider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:value="5"
        android:valueFrom="0"
        android:valueTo="5"
        android:stepSize="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceTitle" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/distanceTitle"
        app:layout_constraintTop_toBottomOf="@+id/priceSlider"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/max_distance_miles"
        android:textSize="20sp"
        />

    <com.google.android.material.slider.Slider
        android:id="@+id/distanceSlider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:value="5"
        android:valueFrom="0"
        android:valueTo="30"
        android:stepSize="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distanceTitle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancel"
        app:layout_constraintTop_toBottomOf="@+id/distanceSlider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save"
        android:text="@string/cancel_string"
        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save"
        app:layout_constraintTop_toBottomOf="@+id/distanceSlider"
        app:layout_constraintStart_toEndOf="@+id/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/continue_string"
        />

</androidx.constraintlayout.widget.ConstraintLayout>